// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VHRating.vue renders default VHRating 1`] = `
<div class="VHRating">
  <div class="VHRating-iconContainer">
    <vh-icon-stub size="medium" name="starOutline" color="orange"></vh-icon-stub>
  </div>
  <div class="VHRating-iconContainer">
    <vh-icon-stub size="medium" name="starOutline" color="orange"></vh-icon-stub>
  </div>
  <div class="VHRating-iconContainer">
    <vh-icon-stub size="medium" name="starOutline" color="orange"></vh-icon-stub>
  </div>
  <div class="VHRating-iconContainer">
    <vh-icon-stub size="medium" name="starOutline" color="orange"></vh-icon-stub>
  </div>
  <div class="VHRating-iconContainer">
    <vh-icon-stub size="medium" name="starOutline" color="orange"></vh-icon-stub>
  </div>
</div>
`;

exports[`VHRating.vue renders modified VHRating 1`] = `
<div class="VHRating VHRating--readonly">
  <div class="VHRating-iconContainer">
    <vh-icon-stub size="large" name="circle" color="red"></vh-icon-stub>
  </div>
  <div class="VHRating-iconContainer">
    <vh-icon-stub size="large" name="circle" color="red"></vh-icon-stub>
  </div>
  <div class="VHRating-iconContainer">
    <vh-icon-stub size="large" name="circle" color="red"></vh-icon-stub>
  </div>
  <div class="VHRating-iconContainer">
    <vh-icon-stub size="large" name="circle" color="red"></vh-icon-stub>
  </div>
  <div class="VHRating-iconContainer">
    <vh-icon-stub size="large" name="circle" color="red"></vh-icon-stub>
  </div>
</div>
`;
